--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,7 +1,8 @@
-Это обновление упрощает встраивание внешнего содержимого на ваши сайты! Представляем новые специализированные блоки встраивания для Facebook, Instagram, Loom и Smartframe. Кроме того, редактор автоматически обнаруживает встраиваемые URL-адреса, которые вы вставляете в пустой абзац. Наряду с этими новыми функциями мы исправили проблему, из-за которой некоторые встроенные URL-адреса не могли редактироваться, и скорректировали отключение предварительного просмотра, чтобы вы всегда видели полностью встроенное содержимое.
-
-Говоря о блоках, теперь вы можете настроить цвет текста и фона в блоках выдержки и преформатированного текста.
-
-Нужна помощь в привлечении большего числа читателей? Новые напоминания о публикации и ведении блога помогут вам придерживаться согласованного графика публикации.
-
-Наконец, мы улучшили поддержку больших размеров текста при выборе домашней страницы или макета страницы, исправили список комментариев сайта, который не обновлялся в определенных случаях, и отполировали заголовок нижнего листа перед публикацией.
+- Мы упростили отслеживание появления новых блоков для использования на вашем сайте.
+- Теперь вы можете выделить текст с помощью тега HTML <mark>, а также изменить цвет текста и фона кнопки блока поиска. Блестяще!
+- Мы скрыли HTML-теги в заголовках сообщений, когда вы проверяете статистику.
+- Мы улучшили поиск в Чтиве - вам показываются новые вещи для чтения и это помогает сайтам с низким трафиком. Беспроигрышный вариант.
+- Если вы являетесь участником цепочки комментариев, вы можете отслеживать это с помощью уведомлений в приложении, а не только по Email.
+- Говоря о комментариях, мы слышали, что некоторые из них могут отсутствовать при просмотре комментариев в Чтиве. Не волнуйтесь - мы нашли и устранили проблему.
+- Экран справки раньше деформировался при повороте устроства из книжной в альбомную ориентацию и обратно, но теперь он остается на месте.
+- Мы исправили больше случаев, когда встраиваемые блоки отображали «невозможно отобразить содержимое», теперь вы сможете увидеть больше содержимого.
