--- a/fastlane/metadata/zh-Hant/release_notes.txt
+++ b/fastlane/metadata/zh-Hant/release_notes.txt
@@ -1,7 +1,8 @@
-本次更新讓你能更輕鬆地在網站嵌入外部內容！ 我們推出 Facebook、Instagram、Loom 和 Smartframe 的全新專屬嵌入區塊。 另外，編輯器能自動偵測到貼至空白段落的可嵌入 URL。 除了這些新功能外，我們修正了無法編輯部分嵌入 URL 的錯誤，並調整預覽裁切情況，讓你隨時查看完整嵌入內容。
-
-至於區塊，你現在可在重要引述和預設格式區塊中自訂文字和背景色彩。
-
-需要協助以利觸及更多讀者嗎？ 全新的 Publicize 和網誌提醒提示，可協助您按照排程定期發文。
-
-最後，我們改善了選擇首頁或頁面版面配置時的大型文字支援、修正網站留言清單在某些情況下未重新整理的問題，並修飾了發佈前底部工作表標題。
+- 新區塊變得更顯眼，讓你知道有新區塊可供網站使用
+- 你現在可以使用 <mark> HTML 標籤反白顯示文字，也能變更搜尋區塊按鈕的文字和背景顏色。 閃閃發亮！
+- 我們隱藏了文章標題的 HTML 標籤，你在查看統計資料時不會看到。
+- 我們改善了「閱讀器探索部分」：為低流量網站提高人氣，展示值得閱讀的新內容。 雙贏。
+- 如果你曾在留言串中留言，除了可以使用電子郵件收件匣追蹤留言，現在也可以使用應用程式內部通知追蹤。
+- 從閱讀器檢視留言時，可能看不到某些留言。 別擔心，我們已發現並修正問題。
+- 過去從直向檢視旋轉到橫向檢視再轉回直向時，「說明」部分會超出畫面範圍，但現在已修正這個錯誤。
+- 我們修正了嵌入內容區塊顯示「無法顯示內容」的錯誤，你現在可以查看所有內容了。
