--- a/fastlane/jetpack_metadata/ko/release_notes.txt
+++ b/fastlane/jetpack_metadata/ko/release_notes.txt
@@ -1,7 +1,6 @@
-이 업데이트를 통해 사이트에 외부 콘텐츠를 훨씬 쉽게 임베드할 수 있습니다! 새로운 페이스북, 인스타그램 Loom 및 Smartframe 전용 임베드 블록을 도입했습니다. 또한, 빈 문단에 붙여넣는 임베드 가능한 URL을 편집기에서 자동으로 감지합니다. 이러한 새로운 기능과 함께 임베드된 일부 URL을 편집할 수 없었던 문제를 해결하고, 항상 임베드된 전체 콘텐츠가 표시되도록 미리보기 자르기를 조정했습니다.
-
-블록 자체의 경우 이제는 요약글 블록과 정형화된 형식 블록에서 텍스트와 배경 색상을 사용자 정의할 수 있습니다.
-
-더 많은 독자에게 도달하기를 원하시나요? 일관된 발행 일정을 유지하는 데 도움이 되도록 배포 기능과 블로깅 알림을 새롭게 수정했습니다.
-
-마지막으로, 홈페이지 또는 페이지 레이아웃을 선택할 때 더 큰 텍스트 크기에 대한 지원을 개선하고, 특정 경우에 사이트 댓글 목록이 새로 고쳐지지 않는 문제를 해결하고, 발행 전 하단 시트 헤더를 수정했습니다.
+- 사이트에서 사용할 수 있는 새 블록이 있을 때 더 쉽게 확인할 수 있도록 만들었습니다.
+- 이제 <mark> HTML 태그를 사용하여 텍스트를 강조 표시할 수 있을 뿐만 아니라 검색 블록 버튼의 텍스트와 배경 색상도 변경할 수 있습니다. 빛납니다!
+- 통계를 확인할 때 HTML 태그가 글 제목에 표시되지 않도록 했습니다.
+- 댓글 스레드에 참여한 경우 이메일 받은 편지함만이 아니라 앱 내 알림을 통해서도 해당 스레드를 추적할 수 있습니다.
+- 세로에서 가로로 회전하고 다시 세로로 회전하면 상자를 벗어나던 도움말 화면이 이제는 그대로 유지됩니다.
+- 블록을 임베드하면 "콘텐츠를 표시할 수 없음"이라는 메시지가 표시되던 추가 사례를 해결하여 모든 콘텐츠를 확인할 수 있도록 했습니다.
