--- a/fastlane/jetpack_metadata/zh-Hans/release_notes.txt
+++ b/fastlane/jetpack_metadata/zh-Hans/release_notes.txt
@@ -1,7 +1,6 @@
-经过此次更新后，您可以更容易地在站点上嵌入外部内容！ 推出面向 Facebook、Instagram、Loom 和 Smartframe 的新的专用嵌入区块。 此外，编辑器会自动检测粘贴到空段落中的可嵌入 URL。 除了这些新功能外，我们还修复了导致无法对部分嵌入的 URL 进行编辑的问题，并调整了预览截断的问题，以便您始终可以看到完整的嵌入内容。
-
-现在，您可以自定义醒目引文和预格式化区块中的文本和背景颜色。
-
-需要帮助您吸引更多读者？ 新的 Publicize 和博客发布提醒功能将帮助您保持一致的发布计划。
-
-最后，我们改进了在选择主页或页面布局时对较大文本大小的支持、修复了某些情况下站点评论列表不能刷新的问题，并完善了预发布底部表页标题。
+- 经过我们改进后，您现在可以更加一目了然地知晓站点上何时有新区块可供使用
+- 现在，您可以使用 <mark> HTML 标记突出显示文本，并可以更改“搜索”区块按钮的文本和背景颜色。 非常绚丽！
+- 在您查看统计数据时，我们在文章标题中隐藏了 HTML 标签。
+- 如果您参与了评论嵌套，您不仅可以通过电子邮件收件箱来跟踪评论，还可以通过应用内通知来跟踪。
+- 之前，“帮助”屏幕在从竖屏转到横屏再转回竖屏的跳转过程中会跳出框，现在不存在这个问题了。
+- 我们还修复了更多嵌入区块显示“无法显示内容”的情况，现在，您可以查看所有内容。
