--- a/fastlane/jetpack_metadata/he/release_notes.txt
+++ b/fastlane/jetpack_metadata/he/release_notes.txt
@@ -1,7 +1,6 @@
-בעדכון הזה שיפרנו את תהליך הטמעת התוכן החיצוני באתר שלך! אנחנו שמחים להציג בלוקים ייעודיים חדשים להטמעת תוכן של פייסבוק, אינסטגרם, Loom ו-Smartframe. בנוסף, העורך יכול לזהות באופן אוטומטי כתובות URL מוטמעות שהודבקו בפסקה ריקה. לצד האפשרויות החדשות האלו, תיקנו בעיה שמנעה עריכה של כמה כתובות URL והתאמנו את החיתוך של התצוגה המקדימה כדי שהתוכן המוטמע תמיד יוצג במלואו.
-
-ועוד בנושא בלוקים, עכשיו אפשר לבצע התאמה לטקסט ולצבע הרקע בבלוקים של ציטוטים ו-Preformatted.
-
-רוצה לקבל עזרה כדי להגיע לעוד קוראים? השיתוף האוטומטי ונדנודים של תזכורות לכתיבה בבלוג יעזרו לך לעמוד בלוח זמנים עקבי לפרסום.
-
-אחרון חביב, שיפרנו את התמיכה בממדי טקסט גדולים יותר במהלך הבחירה בעמוד הבית או בפריסת עמוד, תיקנו את רשימת התגובות באתר שלא התעדכנה במקרים מסוימים ושיפצנו את הכותרת בגיליון התחתון שלפני הפרסום.
+- We've made it easier to see when there are new blocks available for use on your site
+- You can now highlight text using the <mark> HTML tag, as well as change the text and background color of the Search block button. Shiny!
+- We've hidden HTML tags in post titles when you're checking out your stats.
+- If you're part of a comment thread, you can keep track of it through in-app notifications, not just your email inbox.
+- The Help screen used to break out of its box when rotated from portrait to landscape and back to portrait, but now it's staying put.
+- We fixed more cases where embed blocks would show "unable to display content", allowing you to see all of your content.
