--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,8 +1,8 @@
 - 사이트에서 사용할 수 있는 새 블록이 있을 때 더 쉽게 확인할 수 있도록 만들었습니다.
-- 이제 <mark> HTML 태그를 사용하여 텍스트를 강조 표시할 수 있을 뿐만 아니라 검색 블록 버튼의 텍스트와 배경 색상도 변경할 수 있습니다. 빛납니다!
+- 이제 <mark> HTML 태그를 사용하여 텍스트를 강조 표시할 수 있을 뿐만 아니라 검색 블록 버튼의 텍스트와 배경 색상도 변경할 수 있습니다. 빛이 납니다!
 - 통계를 확인할 때 HTML 태그가 글 제목에 표시되지 않도록 했습니다.
 - 뉴스피드 검색을 개선했습니다. 새로운 읽을거리가 표시되며, 트래픽이 적은 사이트에 도움이 됩니다. 서로 좋습니다.
 - 댓글 스레드에 참여한 경우 이메일 받은 편지함만이 아니라 앱 내 알림을 통해서도 해당 스레드를 추적할 수 있습니다.
-- 댓글의 경우 뉴스피드에서 댓글을 볼 때 일부 내용이 누락될 수도 있다고 들었습니다.  걱정하지 마세요. 문제를 찾아서 해결했습니다.
+- 댓글의 경우 뉴스피드에서 댓글을 볼 때 일부 내용이 누락될 수도 있다고 들었습니다. 걱정하지 마세요. 문제를 찾아서 해결했습니다.
 - 세로에서 가로로 회전하고 다시 세로로 회전하면 상자를 벗어나던 도움말 화면이 이제는 그대로 유지됩니다.
 - 블록을 임베드하면 "콘텐츠를 표시할 수 없음"이라는 메시지가 표시되던 추가 사례를 해결하여 모든 콘텐츠를 확인할 수 있도록 했습니다.
