--- a/fastlane/jetpack_metadata/ko/release_notes.txt
+++ b/fastlane/jetpack_metadata/ko/release_notes.txt
@@ -1,5 +1,5 @@
 - 사이트에서 사용할 수 있는 새 블록이 있을 때 더 쉽게 확인할 수 있도록 만들었습니다.
-- 이제 <mark> HTML 태그를 사용하여 텍스트를 강조 표시할 수 있을 뿐만 아니라 검색 블록 버튼의 텍스트와 배경 색상도 변경할 수 있습니다. 빛납니다!
+- 이제 <mark> HTML 태그를 사용하여 텍스트를 강조 표시할 수 있을 뿐만 아니라 검색 블록 버튼의 텍스트와 배경 색상도 변경할 수 있습니다. 빛이 납니다!
 - 통계를 확인할 때 HTML 태그가 글 제목에 표시되지 않도록 했습니다.
 - 댓글 스레드에 참여한 경우 이메일 받은 편지함만이 아니라 앱 내 알림을 통해서도 해당 스레드를 추적할 수 있습니다.
 - 세로에서 가로로 회전하고 다시 세로로 회전하면 상자를 벗어나던 도움말 화면이 이제는 그대로 유지됩니다.
